--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Mini Social App - home</title>
+<title>BuzzBoard - home</title>
 <link rel="stylesheet" href="index.css">
 </head>
 <body>
