--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Mini Social - App Login </title>
+<title>BuzzBoard - App Login </title>
 <link rel="stylesheet" href="login.css">
 
 </head>
