--- a/profile.html
+++ b/profile.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Mini Social App - Profile</title>
+<title>BuzzBoard - Profile</title>
 <link rel="stylesheet" href="profile.css">
 </head>
 <body>
