--- a/signup.html
+++ b/signup.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Mini Social App - Sign Up</title>
+<title>BuzzBoard - Sign Up</title>
 <link rel="stylesheet" href="signup.css">
 </head>
 <body>
